# md_reader

./: .gitignore  LESSONS.md  build.ps1  capacitor.config.json  package-lock.json  package.json
.github/workflows/: build.yml  mobile-build.yml
android/app/: build.gradle
public/: file-api.js  index.html  sw.js
skills/: tauri-capacitor-build.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
